# pingpong_moz1

./: package.xml  requirements.txt  setup.cfg  setup.py
guidance/: 乒乓球Demo第一阶段总结报告.docx
install/: local_setup.sh  setup.sh
log/: latest_build
pingpong_controller/: ball_detector.py  calibration_loader.py  mjx_policy.py  pingpong_node.py  rl_policy.py  safety_limiter.py
pingpong_controller/data/vision_refine/: yoloreal.ndjson
pingpong_controller/models/: moz1_pd.xml
pingpong_controller/outputs/rl_real/: right_arm_joints_test.csv
pingpong_controller/outputs/rl_sim/: stage4g_action_trace.csv  stage4g_obs_trace.csv
pingpong_controller/outputs/vision_calib/: eye_hand_result_1280_undistorted.json  eye_hand_result_848_undistorted.json
pingpong_controller/tools/: __init__.py
pingpong_controller/tools/rl_2real/: __init__.py  mjx_policy_controller.py  test_arm.py
pingpong_controller/tools/rl_sim/: MUJOCO_LOG.TXT  compare_mjx_cpu_env.py  config.yaml  config_utils.py  delay_control.py  mjx_juggle_env.py  mjx_migration.md  mjx_smoke.py  moz1_pd.xml  rl_juggle_env_random.py  show_env.py  show_mjx_env.py  train_juggle_mjx_curriculum.py  train_juggle_mjx_ppo.py  train_juggle_rl_random.py  training.md  training_GPU.md  validate_juggle_mjx_ppo.py  validate_juggle_rl_random.py
pingpong_controller/tools/vision_calib/: collect_eye_to_hand.py  eye_hand_calib.py  generate.py  show_tag.py  test_calibration.py
pingpong_controller/tools/vision_refine/: convert_ndjson.py  predict_fine.py  validate_fine.py  yolo_collector.py  (+1 more)
test/: test_delay_conditioned_control.py
(+266 files in other folders)
