<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pingpong_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yjk2261123518@163.com">jacky</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mc_core_interface</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>

  <!-- Note: ultralytics and pyrealsense2 should be installed via pip -->
  <!-- pip install ultralytics pyrealsense2 -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
